--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "David Cramer <dcramer@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "custom-card-helpers": "^1.3.9",
+    "custom-card-helpers": "~1.3.9",
     "home-assistant-js-websocket": "^4.4.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2"
